--- a/menu.html
+++ b/menu.html
@@ -122,7 +122,7 @@
     <main>
         <div id="browser-to-canvas" class="container">
             <h5>Sync to Canvas
-                <span class="" id="tab-count"></span>
+                (<span class="" id="browser-tab-count"></span>)
                 <span>
                     <a id="sync-all-tabs"
                         class="black white-text waves-effect waves-light btn-small right">
