--- a/menu.html
+++ b/menu.html
@@ -131,14 +131,14 @@
                     </a>
                 </span>
             </h5>
-            <ul id="tab-list" class="collection">
+            <ul id="browser-to-canvas-tab-list" class="collection">
                 <li class="collection-item">No browser tabs to sync</li>
             </ul>
         </div>
 
         <div id="canvas-to-browser" class="container">
-            <h5>Sync to Browser<span><a id="open-all-tabs" class="black white-text waves-effect waves-light btn-small right">Open all<i class="material-icons right">sync</i></a></span></h5>
-            <ul class="collection">
+            <h5>Open all tabs<span><a id="open-all-tabs" class="black white-text waves-effect waves-light btn-small right">Open all<i class="material-icons right">sync</i></a></span></h5>
+            <ul id="canvas-to-browser-tab-list" class="collection">
                 <li class="collection-item">No browser tabs to sync</li>
             </ul>
         </div>
