--- a/menu.html
+++ b/menu.html
@@ -198,8 +198,8 @@
         </div>
     </footer>
 
-    <script src="js/jquery-3.6.4.min.js"></script>
-    <script src="js/materialize.min.js"></script>
+    <script src="js/lib/jquery-3.6.4.min.js"></script>
+    <script src="js/lib/materialize.min.js"></script>
     <script src="js/ui.js"></script>
 
 </body>
