Update submodule browser-extension

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -52,7 +52,7 @@
       <!-- Sync Settings for Browser to Canvas -->
       <div class="sync-settings">
         <label class="checkbox-label">
-          <input type="checkbox" id="autoSyncNew"> Auto-sync new tabs
+          <input type="checkbox" id="autoSyncNew"> Auto-sync new tabs(on tab open only)
         </label>
         <label class="checkbox-label">
           <input type="checkbox" id="showSyncedTabs"> Show already synced tabs
