--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -73,7 +73,7 @@
         <div class="form-group">
           <label for="syncModeSelect">Select Mode</label>
           <select id="syncModeSelect" class="input-field">
-            <option value="explorer">Explorer mode (default)</option>
+            <option value="explorer" selected>Explorer mode (default)</option>
             <option value="context">Context mode</option>
           </select>
           <small class="help-text">Choose how the extension synchronizes tabs</small>
