Update submodule browser-extension

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -14,6 +14,7 @@
         <div>
           <h1>Canvas Extension Settings</h1>
           <p class="subtitle">Configure your connection to Canvas server</p>
+          <p class="subtitle" id="extVersion"></p>
         </div>
       </div>
     </header>
