--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -202,6 +202,8 @@
 
   </div>
 
+  <div class="toast" id="toast" style="display: none;"></div>
+
   <script type="module" src="popup.js"></script>
 </body>
 </html>
