Update submodule browser-extension

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -69,7 +69,7 @@
           <!-- Sync Settings for Browser to Canvas -->
           <div class="sync-settings">
             <label class="checkbox-label">
-              <input type="checkbox" id="autoSyncNew"> Auto-sync new tabs(on tab open only)
+              <input type="checkbox" id="sendNewTabsToCanvas"> Send newly opened tabs to Canvas Server
             </label>
             <label class="checkbox-label">
               <input type="checkbox" id="showSyncedTabs"> Show already synced tabs
@@ -99,7 +99,7 @@
           <!-- Sync Settings for Canvas to Browser -->
           <div class="sync-settings">
             <label class="checkbox-label">
-              <input type="checkbox" id="autoOpenNew"> Auto-open context tabs
+              <input type="checkbox" id="openTabsAddedToCanvas"> Open tabs added to Canvas Server
             </label>
             <label class="checkbox-label">
               <input type="checkbox" id="showAllCanvasTabs"> Show all context tabs
