Update submodule browser-extension

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -204,11 +204,7 @@
 
   <div class="toast" id="toast" style="display: none;"></div>
 
-  <!-- Context Menu -->
-  <div id="contextMenu" class="context-menu">
-    <button class="context-menu-item" id="contextMenuSync">Insert to Current Context</button>
-    <button class="context-menu-item" id="contextMenuBrowse">Browse Contexts...</button>
-  </div>
+  <!-- Context Menu removed - popup boundaries prevent proper floating menus -->
 
   <script type="module" src="popup.js"></script>
 </body>
