firefox madness damn you mozzilla damn you!

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -33,7 +33,7 @@
 
         <div class="form-group">
           <label for="serverUrl">Canvas Server URL</label>
-          <input type="url" id="serverUrl" value="http://127.0.0.1:8001"
+          <input type="url" id="serverUrl" value="https://my.cnvs.ai"
                  class="input-field" required>
           <small class="help-text">URL of your Canvas server instance</small>
         </div>
@@ -171,7 +171,7 @@
             <input type="checkbox" id="syncOnlyTaggedTabs">
             Sync only tabs with tag:
           </label>
-          <input type="text" id="syncTagFilter" placeholder="e.g., work, personal" 
+          <input type="text" id="syncTagFilter" placeholder="e.g., work, personal"
                  class="input-field" style="margin-top: 8px;" disabled>
           <small class="help-text">Only sync tabs that have the specified tag in their feature array</small>
         </div>
