Update submodule browser-extensions

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -78,7 +78,13 @@
 
           <div class="tab-section">
             <div class="section-header">
-              <h3>Unsynced Browser Tabs</h3>
+              <div class="section-header-left">
+                <label class="checkbox-label select-all-label">
+                  <input type="checkbox" id="selectAllBrowser">
+                  <span class="checkmark"></span>
+                </label>
+                <h3 id="browserTabsHeader">Unsynced Browser Tabs</h3>
+              </div>
               <div class="section-actions">
                 <button class="action-btn secondary" id="syncAllBtn">Sync All</button>
                 <button class="action-btn danger" id="closeAllBtn">Close All</button>
@@ -108,7 +114,13 @@
 
           <div class="tab-section">
             <div class="section-header">
-              <h3>Canvas Context Tabs</h3>
+              <div class="section-header-left">
+                <label class="checkbox-label select-all-label">
+                  <input type="checkbox" id="selectAllCanvas">
+                  <span class="checkmark"></span>
+                </label>
+                <h3 id="canvasTabsHeader">Canvas Context Tabs</h3>
+              </div>
               <div class="section-actions">
                 <button class="action-btn secondary" id="openAllBtn">Open All</button>
               </div>
